# CG-2020-I

2. HelloTriangle/src/: main.cpp
HelloTriangle 2/src/: main.cpp
Laboratorio/Sierpinsky triangle/: CMakeLists.txt
Laboratorio/Sierpinsky triangle/src/: main.cpp  shader1.fs  shader2.fs  shader2.vs
Laboratorio/Triangle change color/: CMakeLists.txt
Laboratorio/Triangle change color/src/: main.cpp
Sierpinsky triangle/src/: shader.fs
Tutoriales/1. firstOpenGL/src/: main.cpp
Tutoriales/2. HelloTriangle/: CMakeLists.txt
Tutoriales/2. HelloTriangle/cmake/: FindGLFW3.cmake
Tutoriales/3. Shaders/: CMakeLists.txt
Tutoriales/3. Shaders/include/: shader.h
Tutoriales/3. Shaders/src/: main.cpp  shader.fs
Tutoriales/4. textures/: CMakeLists.txt
Tutoriales/4. textures/include/: shader.h  sierpinsky.h
Tutoriales/4. textures/src/: main.cpp
Tutoriales/5. Transformations/: CMakeLists.txt
Tutoriales/5. Transformations/src/: main.cpp  shader.fs
Tutoriales/6. Coordinate Systems/: CMakeLists.txt  apple.mtl  leaves.mtl  log.mtl
Tutoriales/6. Coordinate Systems/include/: readMesh.h  shader.h
Tutoriales/6. Coordinate Systems/src/: glad.c  main.cpp  shader.fs  shader.vs  shader2.fs
firstOpenGL/: CMakeLists.txt  firstOpenGL.cpp  firstOpenGL.sln  firstOpenGL.vcxproj  firstOpenGL.vcxproj.filters
firstOpenGL/x64/Debug/: firstOpenGL.ilk  firstOpenGL.vcxproj.FileListAbsolute.txt  vc142.idb
rubik_cube/: CMakeLists.txt
rubik_cube/include/: camera.h  shader.h
rubik_cube/shaders/: shader.fs  shader.vs
rubik_cube/src/: main.cpp
(+9 files in other folders)
